tests/node_modules_errors/node_modules_errors.exp
Error ------------------------------------------------------------------------------------------------------ main.js:3:1

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-type]

   main.js:3:1
   3| x as number;
      ^

References:
   node_modules/a.js:1:17
   1| export const x: string = 42;
                      ^^^^^^ [1]
   main.js:3:6
   3| x as number;
           ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------- node_modules/a.js:1:26

Cannot assign `42` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   node_modules/a.js:1:26
   1| export const x: string = 42;
                               ^^ [1]

References:
   node_modules/a.js:1:17
   1| export const x: string = 42;
                      ^^^^^^ [2]



Found 2 errors
